# qdashboard

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  cookie_integration_example.py  ping_electronics.sh  pyproject.toml  qdashboard.sh  qibocal_actioncard.yml  quantum_dashboard.py  quantum_dashboard.py.backup  requirements.txt  run.sh  setup.cfg  setup.py  start_qdashboard.sh  test_ip_list.py  test_qpu_parameters.py
.github/: copilot-instructions.md
assets/css/: dashboard.css  listr.pack.css  menu.css  qq.css
assets/js/: dashboard-common.js
example_platform/: calibration.json  parameters.json
qdashboard/: __init__.py  cli.py  platforms_cli.py  ref_actions.yml
qdashboard/assets/css/: dashboard.css  experiments.css  menu.css  theme.css
qdashboard/assets/js/: dashboard-common.js  experiment-builder.js  explorer-panel.js  history-panel.js  qpu-status-panel.js  shell.js
qdashboard/core/: app.py  config.py
qdashboard/db/: __init__.py  database.py
qdashboard/experiments/: __init__.py  job_submission.py  protocols.py  protocols_new.py
qdashboard/qpu/: __init__.py  monitoring.py  platforms.py  slurm.py  topology.py  utils.py
qdashboard/templates/: _panel_explorer.html  _panel_history.html  _panel_library.html  _tab_action_builder.html  _tab_qpu_status.html  _tab_slurm.html  dashboard.html  error.html  experiments.html  file_browser.html  history.html  latest_not_found.html  latest_report.html  qpus.html  qqreport_template.html  report_embed.html  shell.html
qdashboard/tests/: test_experiment_submission.py  test_file_browsing.py  test_platforms_management.py  test_report_rendering.py
qdashboard/utils/: __init__.py  formatters.py  logger.py  signals.py
qdashboard/web/: __init__.py  file_browser.py  reports.py  routes.py
templates/: dashboard.html  experiments.html  file_browser.html  job_submission.html  latest_not_found.html  latest_report.html  qpus.html  qqreport_template.html
