[metadata]
name = qdashboard
version = 1.0.0

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = .
include = qdashboard*
exclude = tests*

[options.entry_points]
console_scripts =
    qdashboard = qdashboard.cli:main
    qdashboard-server = qdashboard.cli:main

[options.package_data]
* = templates/*.html, assets/css/*.css, assets/js/*.js, assets/fonts/*, assets/fonts/jquery.filer-icons/*
