[metadata]
name = qdashboard
version = 0.0.3
description = A quantum computing dashboard with file browsing, experiment monitoring, QPU status tracking, and report visualization capabilities
long_description = file: README.md
long_description_content_type = text/markdown
author = TII Quantum Team
author_email = quantum@tii.ae
license = MIT
url = https://github.com/qiboteam/qdashboard

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = .
include = qdashboard*
exclude = tests*

[options.entry_points]
console_scripts =
    qdashboard = qdashboard.cli:main
    qdashboard-server = qdashboard.cli:main
    qdashboard-platforms = qdashboard.platforms_cli:main

[options.package_data]
* = templates/*.html, assets/css/*.css, assets/js/*.js, assets/fonts/*, assets/fonts/jquery.filer-icons/*
